# STM32_custom_bootloader

./: .gitignore  CMakeLists.txt  README.md  build.sh
application/: CMakeLists.txt  application.gdb
application/src/: main.c
bootloader/: CMakeLists.txt  bootloader.gdb
bootloader/src/: main.c
cmake/: gcc-arm-none-eabi.cmake
common/: STM32F411XX_FLASH.ld.in
common/inc/: cmsis_compiler.h  cmsis_gcc.h  mpu_armv7.h  stm32f411xe.h  stm32f4xx.h  system_stm32f4xx.h
